--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,9 @@
 /public/storage
 /storage/*.key
 /vendor
-/public/assets/iamges
+/public/assets/iameges
+/public/iameges/iduka
+/public/iameges/internship
 .env
 .env.backup
 .env.production
