--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,10 @@
         "intervention/image": "^2.7",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "livewire/livewire": "^3.4",
+        "livewire/volt": "^1.6",
+        "robsontenorio/mary": "^1.21"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
