--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.19",
         "axios": "^1.1.2",
+        "daisyui": "^4.11.1",
         "laravel-vite-plugin": "^0.8.0",
+        "postcss": "^8.4.38",
+        "sax": "^1.3.0",
+        "tailwindcss": "^3.4.3",
         "vite": "^4.0.0"
     }
 }
